--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "vihanpereraux",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "socket.io": "^4.7.1"
   }
 }
